# mcp-server

./: .env.example  pyproject.toml
src/: main.py
src/auth/: auth.py
src/core/: config.py  exceptions.py  logger.py
src/db/mongo/: mongo.py
src/factory/: singleton_factory.py
src/http/: discovery_client.py
src/mcp/: mcp.py
src/mcp/tools/: resolve_tools.py  search_tools.py
src/schemas/: enums.py  models.py
src/services/: position_service.py  search_service.py
src/utils/: metrics.py  normalizer.py  validator.py
