[project]
name = "mcp-server-volkov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.22.5",
    "dotenv>=0.9.9",
    "fastmcp>=2.13.0.2",
    "httpx>=0.28.1",
    "pymongo>=4.15.4",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]
